--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@babel/core": "^7.17.9",
     "@babel/eslint-parser": "^7.17.0",
     "@babel/parser": "^7.17.9",
+    "@swc/core": "^1.3.6",
     "@types/node": "^17.0.23",
     "@typescript-eslint/parser": "^5.11.0",
     "acorn": "^8.7.0",
     "espree": "^9.3.1",
     "meriyah": "^4.2.1",
+    "meriyah-eslint-parser": "file:../meriyah-eslint-parser",
     "seafox": "^1.7.1",
     "tenko": "^2.0.1",
     "typescript": "^4.6.3"
